[package]
name = "mdbook-diagrams"
version = "0.1.2"
edition = "2024"
description = "Mermaid diagram generator for mdbook"
repository = "https://github.com/l-yuchan/mdbook-diagrams"
license = "MIT"
keywords = ["mermaid", "diagram", "mdbook", "preprocessor"]
categories = ["visualization"]

[dependencies]
mdbook = "0.4"
anyhow = "1.0"
regex = "1"
uuid = { version = "1", features = ["v4"] }
serde_json = "1.0"
clap = "4.5"
semver = "1.0"
tokio = "1.47"
